@@ -3,10 +3,8 @@ package org.minefortress.blueprints.manager;
 import org.minefortress.renderer.gui.blueprints.BlueprintGroup;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public final class BlueprintMetadataManager {
-
 
     private final Map<BlueprintGroup, List<BlueprintMetadata>> blueprintsMap = new HashMap<>();
     private int index = 0;
@@ -23,25 +21,16 @@ public final class BlueprintMetadataManager {
         return flatBlueprints().get(index);
     }
 
-//    public static BlueprintMetadata getByFile(String file) {
-//        for(BlueprintMetadata info : STRUCTURES) {
-//            if(info.getFile().equals(file)) {
-//                return info;
-//            }
-//        }
-//        return null;
-//    }
-
     public List<BlueprintMetadata> getAllForGroup(BlueprintGroup group) {
         return blueprintsMap.getOrDefault(group, Collections.emptyList());
     }
 
-    public BlueprintMetadata add(BlueprintGroup group, String name, String file, int floorLevel, boolean premium) {
+    public BlueprintMetadata add(BlueprintGroup group, String name, String file, int floorLevel, String requirementId) {
         if (isContainsBlueprint(name, file)) {
             throw new IllegalArgumentException("Blueprint with name " + name + " and file " + file + " already exists");
         }
 
-        final BlueprintMetadata metadata = new BlueprintMetadata(name, file, floorLevel, premium);
+        final BlueprintMetadata metadata = new BlueprintMetadata(name, file, floorLevel, requirementId);
         blueprintsMap.computeIfAbsent(group, k -> new ArrayList<>()).add(metadata);
         return metadata;
     }
@@ -49,6 +38,12 @@ public final class BlueprintMetadataManager {
     public void reset() {
         this.blueprintsMap.clear();
         this.index = 0;
+    }
+
+    public void remove(String filename) {
+        blueprintsMap.forEach((k, v) -> {
+            v.removeIf(it -> it.getFile().equals(filename));
+        });
     }
 
     public void update(String fileName, int newFloorLevel) {
@@ -63,7 +58,7 @@ public final class BlueprintMetadataManager {
     }
 
     private List<BlueprintMetadata> flatBlueprints() {
-        return blueprintsMap.entrySet().stream().flatMap(e -> e.getValue().stream()).collect(Collectors.toList());
+        return blueprintsMap.values().stream().flatMap(Collection::stream).toList();
     }
 
 }
